@@ -66,7 +66,7 @@ deps=py>=1.4.0
 [testenv:jython]
 changedir=testing
 commands=
-    {envpython} {envbindir}/py.test-jython --no-tools-on-path \
+    {envpython} {envbindir}/py.test-jython \
         -rfsxX --junitxml={envlogdir}/junit-{envname}2.xml []
 
 [pytest]
