@@ -2,6 +2,7 @@ Changes between 2.1.2 and [next version]
 ----------------------------------------
 
 - fix issue67 / junitxml now contains correct test durations, thanks ronny
+- fix issue75 / skipping test failure on jython
 
 Changes between 2.1.1 and 2.1.2
 ----------------------------------------
